# aoc2023

./: pyproject.toml
day1/: p1.ipynb  p2.ipynb  post.ipynb
day2/: p1.ipynb  p2.ipynb  post.ipynb
day3/: p1.ipynb  p2.ipynb
day4/: p1.ipynb  p2.ipynb  post.ipynb
day5/: p1.ipynb  p2.ipynb
day6/: p1 copy.ipynb  p1.ipynb
day7/: p1 copy.ipynb  p1.ipynb
day8/: p1.ipynb  p2.ipynb
day9/: p1 copy.ipynb  p1.ipynb
misc/day202225/: p1.ipynb
