[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["hyusap <paulayush@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
